[project]
name = "google-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.63.0",
    "markdownify>=1.1.0",
    "pydantic>=2.7.1",
]

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B", "I"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
